fixed horizontal overflow

--- a/app/assets/stylesheets/root.css.less
+++ b/app/assets/stylesheets/root.css.less
@@ -57,6 +57,9 @@
   .soldier_profile{
     padding: 20px;
     display: none;
+	  -webkit-box-sizing: border-box;
+   	   -moz-box-sizing: border-box;
+            box-sizing: border-box;
 
     &.absolute {
       position: absolute;
